--- a/index.html
+++ b/index.html
@@ -62,6 +62,31 @@
             </li>
           </ul>
         </address>
+        <div class="ham-menu-div">
+          <svg
+            class="ham-menu-svg js-open-menu"
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="22"
+            viewBox="0 0 32 22"
+            fill="none"
+          >
+            <g clip-path="url(#clip0_297053_2156)">
+              <path
+                d="M1.34766 20.0431H30.8861M1.34766 10.7354H30.8861M1.34766 1.42773H30.8861"
+                stroke="#2E2F42"
+                stroke-width="3"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_297053_2156">
+                <rect width="32" height="22" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+        </div>
       </div>
     </header>
 
@@ -404,7 +429,7 @@
     </main>
 
     <!-- Footer content -->
-    <footer class="footer-background footer-container">
+    <footer class="footer-container">
       <div class="container footer-div">
         <div class="footer-logo-div">
           <a
@@ -471,7 +496,10 @@
             <button type="submit" class="footer-form-button">
               Subscribe
               <svg class="footer-form-svg" width="24" height="24">
-                <use href="./images/icons.svg#send-icon"></use>
+                <use
+                  class="footer-form-svg-use"
+                  href="./images/icons.svg#send-icon"
+                ></use>
               </svg>
             </button>
           </form>
